--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <meta name="keywords" content="Ballet, jazz, modern, dance, pilates, dance studio, studio, school, dance classes, ballet classes, ballet school, ballet
         studio, dance school, Albemarle, Charlottesville, Crozet, Western Albemarle High School, Henley, Brownsville, Crozet Elementary"
   />
+  <link rel="shortcut icon" type="image/jpg" href="%PUBLIC_URL%/favicon.jpg">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -70,7 +70,6 @@
     }(window.location))
   </script>
   <!-- End Single Page Apps for GitHub Pages -->
-
   <title>Albemarle Ballet Theatre</title>
 </head>
 
