--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta name="keywords" content="Ballet, jazz, modern, dance, pilates, dance studio, studio, school, dance classes, ballet classes, ballet school, ballet
         studio, dance school, Albemarle, Charlottesville, Crozet, Western Albemarle High School, Henley, Brownsville, Crozet Elementary"
   />
-  <link rel="shortcut icon" type="image/jpg" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
