add meta description and hamburguer animation

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
   <!-- <meta property="fb:app_id" content="302184056577324" /> -->
   <meta property="og:type" content="business.business" />
-  <!-- EDIT -->
-  <meta property="og:url" content="Put your own URL to the object here" />
+  <meta property="og:url" content="http://abtdance.org/" />
   <meta property="og:title" content="Albemarle Ballet Theatre" />
   <!-- EDIT -->
   <meta property="og:image" content="" />
@@ -26,6 +25,8 @@
   <meta name="keywords" content="Ballet, jazz, modern, dance, pilates, dance studio, studio, school, dance classes, ballet classes, ballet school, ballet
         studio, dance school, Albemarle, Charlottesville, Crozet, Western Albemarle High School, Henley, Brownsville, Crozet Elementary"
   />
+  <meta name="description" content="Dance School offering classes to Crozet, Charlottesville and Central Virginia">
+
 
   <link rel="shortcut icon" href="favicon.ico">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -37,17 +38,6 @@
 
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
-    // Single Page Apps for GitHub Pages
-    // https://github.com/rafrex/spa-github-pages
-    // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
-    // ----------------------------------------------------------------------
-    // This script checks to see if a redirect is present in the query string
-    // and converts it back into the correct url and adds it to the
-    // browser's history using window.history.replaceState(...),
-    // which won't cause the browser to attempt to load the new url.
-    // When the single page app is loaded further down in this file,
-    // the correct url will be waiting in the browser's history for
-    // the single page app to route accordingly.
     (function (l) {
       if (l.search) {
         var q = {};
@@ -66,8 +56,7 @@
     }(window.location))
   </script>
   <!-- End Single Page Apps for GitHub Pages -->
-
-  <title>Albemarle Ballet Theatre</title>
+  <title>Albemarle Ballet Theatre | Dance Classes for Crozet, Charlottesville and Central Virginia</title>
 </head>
 
 <body>
