--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="" />
   <meta property="business:contact_data:street_address" content="5798 Three Notched Road, Suite 200 - Rear Entrance, Crozet, VA 22932"
   />
-  <!-- Edit -->
+  <!-- Edit Meta -->
   <meta property="business:contact_data:locality" content="Crozet, VA, Charlottesville, VA" />
   <meta property="business:contact_data:postal_code" content="22932" />
   <meta property="business:contact_data:country_name" content="United States" />
